# ml_engineer_practices

./: .gitignore  .pre-commit-config.yaml  Linting.md  README.md  pyproject.toml
hw1/: factorial.py  main.py
hw2/: README.md  fasttext.ipynb  imdb.csv
